fixed overflow header problem!

--- a/style/style.css
+++ b/style/style.css
@@ -1,5 +1,6 @@
 body {
 	background: #272822;
+	color: #eee;
 }
 
 table {
@@ -9,10 +10,40 @@ table {
 	left: 0px;
 	width: 100%;
 	height: 100%;
+	table-layout: fixed;
+	overflow: hidden;
+	white-space: nowrap;
 }
 
 td {
 	border: 1px solid #636657;
 	width: 10%;
-	height: 10%;
+	height: 8%;
+	overflow: hidden;
+	text-overflow: ellipsis;
+}
+
+#info-row td {	
+	min-height: 100px;
+}
+
+td:hover {
+	overflow: visible;
+}
+
+.tag-header {
+	color: #eee;
+}
+
+td:hover .tag-header {
+	position: fixed;
+	background: #333;
+}
+
+td:hover .spacer {
+	height: 36px;
+}
+td:hover .last-tag-header {
+	position: absolute;
+	right: 0px;
 }
